# realty-parser

./: .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.postgres  Makefile  README.md  config.yaml  docker-compose.yaml  docker-compose.yml  docker_setup.sh  go.mod  go.sum  grafana.sh  grafana_dashboard.json  kafka_setup.sh  prometheus.sh  prometheus_config.yaml  psql_setup.sh  server_setup.sh  set_up.sh
cmd/parser/: main.go
configs/: config_vars.testing.yaml  grafana_config.ini  static_config.yaml
internal/cian/: parser.go  search.go
internal/config/: config.go
internal/db/: db.go
internal/kafka/: producer.go
internal/metrics/: metrics.go
internal/model/: flat.go
internal/scoring/: score.go  subway.go
internal/worker/: worker.go
migrations/: 001_create_flats_history.sql  002_create_user_subscriptions.sql  003_create_user_sent_messages.sql  004_fix_user_subscriptions_unique.sql  005_add_region_to_user_subscriptions.sql  006_add_region_to_flats_history.sql  007_allow_multiple_active_subscriptions.sql  008_add_deal_type_to_user_subscriptions.sql  009_add_deal_type_to_flats_history.sql  010_add_sale_fields_to_flats_history.sql  011_add_extended_filters_to_user_subscriptions.sql  012_create_subscription_scoring_params.sql  013_add_dishwasher_conditioner_to_scoring_params.sql  014_create_report_user_subscriptions.sql
src/: main.cpp
src/backgrounds/: latest_flats_listener.cpp  latest_flats_listener.hpp
src/components/: s3api_client.cpp  s3api_client.hpp  statistics.hpp  telegram_bot.cpp  telegram_bot.hpp
src/handlers/: flats_history.cpp  flats_history.hpp  hello.cpp  hello.hpp
src/utils/: filter_utils.hpp  flat_info.hpp  flat_score.hpp  request_utils.hpp  subway_scoring_utils.hpp  telegram_mailing_utils.hpp  time_utils.hpp
